Update framework for each page

--- a/src/app/product/new_ar_product_detail.html
+++ b/src/app/product/new_ar_product_detail.html
@@ -1,3 +1,40 @@
-<div>
-    <h1>Hello world!!! New AR product and details!!!</h1>
-</div>
+<div class="container">
+    <div class="row" style="background-color: darkorange;">
+        <div class="col-lg-4" style="background-color: #dcdcdc;">
+            <h1>AR产品名</h1>
+            <h1>AR产品名</h1>
+        </div>
+        <div class="col-lg-4" style="background-color: #dcdcdc;">
+            <h1>价格</h1>
+            <h1>价格</h1>
+        </div>
+        <div class="col-lg-4" style="background-color: #dcdcdc;">
+            <h1>评分</h1>
+            <h1>评分</h1>
+        </div>
+    </div>
+    <div class="row" style="background-color: darkorange;">
+        <div class="col-lg-12" style="background-color: #dcdcdc;">
+            <h1>产品介质形式</h1>
+            <h1>产品介质形式</h1>
+        </div>
+    </div>
+    <div class="row" style="background-color: darkorange;">
+        <div class="col-lg-12" style="background-color: #dcdcdc;">
+            <h1>一级分类</h1>
+            <h1>一级分类</h1>
+        </div>
+    </div>
+    <div class="row" style="background-color: darkorange;">
+        <div class="col-lg-12" style="background-color: #dcdcdc;">
+            <h1>二级分类</h1>
+            <h1>二级分类</h1>
+        </div>
+    </div>
+    <div class="row" style="background-color: darkorange;">
+        <div class="col-lg-12" style="background-color: #dcdcdc;">
+            <h1>新增/修改</h1>
+            <h1>新增/修改</h1>
+        </div>
+    </div>
+ </div>
