--- a/src/app/product/product_list.html
+++ b/src/app/product/product_list.html
@@ -1,3 +1,53 @@
-<div>
-    <h1>Hello world!!! The product list!!!</h1>
+<div class="container">
+    <div class="row" style="background-color: darkorange;">
+        <div class="col-lg-4" style="background-color: #dcdcdc;">
+            <h1>产品分类</h1>
+            <h1>发布状态</h1>
+        </div>
+        <div class="col-lg-4" style="background-color: #dcdcdc;">
+            <h1>产品类型</h1>
+            <h1>是否推荐</h1>
+        </div>
+        <div class="col-lg-4" style="background-color: #dcdcdc;">
+            <h1>搜索</h1>
+            <h1>搜索</h1>
+        </div>
+    </div>
+    <div class="row" style="background-color: darkorange;">
+        <div class="col-lg-3" style="background-color: greenyellow;">
+            <h1>新增AR产品</h1>
+            <h1>新增AR产品</h1>
+        </div>
+        <div class="col-lg-3" style="background-color: cornflowerblue;">
+            <h1>新增视频产品</h1>
+            <h1>新增视频产品</h1>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-12" style="background-color: #ff0000;">
+            <h1>Table Content</h1>
+            <h1>Table Content</h1>
+            <h1>Table Content</h1>
+            <h1>Table Content</h1>
+            <h1><a href="#new_ar_product_detail/2222">2222 product</a></h1>
+        </div>
+    </div>
+    <div class="row" style="background-color: darkorange;">
+        <div class="col-lg-2" style="background-color: greenyellow;">
+            <h1>推荐</h1>
+            <h1>推荐</h1>
+        </div>
+        <div class="col-lg-2" style="background-color: cornflowerblue;">
+            <h1>取消推荐</h1>
+            <h1>取消推荐</h1>
+        </div>
+        <div class="col-lg-2" style="background-color: greenyellow;">
+            <h1>上架</h1>
+            <h1>上架</h1>
+        </div>
+        <div class="col-lg-2" style="background-color: cornflowerblue;">
+            <h1>下架</h1>
+            <h1>下架</h1>
+        </div>
+    </div>
 </div>
