--- a/src/app/product/new_video_product_detail.html
+++ b/src/app/product/new_video_product_detail.html
@@ -1,3 +1,59 @@
-<div>
-    <h1>Hello world!!! New video product and details!!!</h1>
+<div class="container">
+    <div class="row" style="background-color: darkorange;">
+        <div class="col-lg-4" style="background-color: #dcdcdc;">
+            <h1>视频产品名</h1>
+            <h1>视频产品名</h1>
+        </div>
+        <div class="col-lg-4" style="background-color: #dcdcdc;">
+            <h1>价格</h1>
+            <h1>价格</h1>
+        </div>
+        <div class="col-lg-4" style="background-color: #dcdcdc;">
+            <h1>评分</h1>
+            <h1>评分</h1>
+        </div>
+    </div>
+    <div class="row" style="background-color: darkorange;">
+        <div class="col-lg-12" style="background-color: #dcdcdc;">
+            <h1>产品介质形式</h1>
+            <h1>产品介质形式</h1>
+        </div>
+    </div>
+    <div class="row" style="background-color: darkorange;">
+        <div class="col-lg-12" style="background-color: #dcdcdc;">
+            <h1>一级分类</h1>
+            <h1>一级分类</h1>
+        </div>
+    </div>
+    <div class="row" style="background-color: darkorange;">
+        <div class="col-lg-12" style="background-color: #dcdcdc;">
+            <h1>二级分类</h1>
+            <h1>二级分类</h1>
+        </div>
+    </div>
+    <div class="row" style="background-color: darkorange;">
+        <div class="col-lg-12" style="background-color: #dcdcdc;">
+            <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">新增/修改</button>
+
+            <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                            <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                        </div>
+                        <div class="modal-body">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary">Save changes</button>
+                        </div>
+                    </div>
+                    <!-- /.modal-content -->
+                </div>
+                <!-- /.modal-dialog -->
+            </div>
+        </div>
+    </div>
 </div>
