--- a/src/app/product/primary_product.html
+++ b/src/app/product/primary_product.html
@@ -1,5 +1,47 @@
-<div>
-    <h1>Hello world!!! primary product.</h1>
+<div class="container">
+    <div class="row" style="background-color: darkorange;">
+        <div class="col-lg-4" style="background-color: #dcdcdc;">
+            <h1>Content 1</h1>
+            <h1>Content 1</h1>
+            <h1>Content 1</h1>
+            <h1>Content 1</h1>
+            <h1>Content 1</h1>
+            <h1>Content 1</h1>
+            <h1>Content 1</h1>
+            <h1>Content 1</h1>
+            <h1>Content 1</h1>
+            <h1>Content 1</h1>
+        </div>
+        <div class="col-lg-8">
+            <div class="row">
+                <div class="col-lg-12" style="background-color: #ff0000;">
+                    <h1>Content 2</h1>
+                    <h1>Content 2</h1>
+                    <h1>Content 2</h1>
+                    <h1>Content 2</h1>
+                    <h1>Content 2</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6 col-md-6" style="background-color: greenyellow;">
+                    <h1>Content 3</h1>
+                    <h1>Content 3</h1>
+                    <h1>Content 3</h1>
+                    <h1>Content 3</h1>
+                    <h1>Content 3</h1>
+                </div>
+                <div class="col-lg-6 col-md-6" style="background-color: cornflowerblue;">
+                    <h1>Content 4</h1>
+                    <h1>Content 4</h1>
+                    <h1>Content 4</h1>
+                    <h1>Content 4</h1>
+                    <h1>Content 4</h1>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--<h1>Hello world!!! primary product.</h1>
 
     <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
         Launch Demo Modal
@@ -20,9 +62,8 @@
                     <button type="button" class="btn btn-primary">Save changes</button>
                 </div>
             </div>
-            <!-- /.modal-content -->
+            &lt;!&ndash; /.modal-content &ndash;&gt;
         </div>
-        <!-- /.modal-dialog -->
-    </div>
-    <!-- /.modal -->
+        &lt;!&ndash; /.modal-dialog &ndash;&gt;
+    </div>-->
 </div>
