--- a/src/app/user/user_admin.html
+++ b/src/app/user/user_admin.html
@@ -1,3 +1,23 @@
-<div>
-    <h1>Hello world!!! User administration!!!</h1>
+<div class="container">
+    <div class="row" style="background-color: darkorange;">
+        <div class="col-lg-4" style="background-color: #dcdcdc;">
+            <h1>手机号码</h1>
+        </div>
+        <div class="col-lg-4" style="background-color: #dcdcdc;">
+            <h1>号码内容</h1>
+        </div>
+        <div class="col-lg-4" style="background-color: #dcdcdc;">
+            <h1>搜索</h1>
+        </div>
+    </div>
+    <div class="row" style="background-color: darkorange;">
+        <div class="col-lg-12" style="background-color: #dcdcdc;">
+            <h1>联系列表</h1>
+            <h1>联系列表</h1>
+            <h1>联系列表</h1>
+            <h1>联系列表</h1>
+            <h1>联系列表</h1>
+            <h1>联系列表</h1>
+        </div>
+    </div>
 </div>
