--- a/src/app/user/user_admin.html
+++ b/src/app/user/user_admin.html
@@ -1,23 +1,98 @@
 <div class="container">
     <div class="row" style="background-color: darkorange;">
-        <div class="col-lg-4" style="background-color: #dcdcdc;">
-            <h1>手机号码</h1>
+        <div class="col-lg-8">
+            <span class="label label-default">手机号码：</span>
+            <input type="text" placeholder="输入手机号码...">
         </div>
-        <div class="col-lg-4" style="background-color: #dcdcdc;">
-            <h1>号码内容</h1>
-        </div>
-        <div class="col-lg-4" style="background-color: #dcdcdc;">
-            <h1>搜索</h1>
+        <div class="col-lg-4">
+            <button type="button" class="btn btn-primary">搜索</button>
         </div>
     </div>
     <div class="row" style="background-color: darkorange;">
         <div class="col-lg-12" style="background-color: #dcdcdc;">
-            <h1>联系列表</h1>
-            <h1>联系列表</h1>
-            <h1>联系列表</h1>
-            <h1>联系列表</h1>
-            <h1>联系列表</h1>
-            <h1>联系列表</h1>
+            <div class="panel panel-default">
+                <div class="panel-heading">会员列表</div>
+                <!-- /.panel-heading -->
+                <div class="panel-body">
+                    <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
+                        <thead>
+                        <tr>
+                            <th>手机号码</th>
+                            <th>注册时间</th>
+                            <th>宝宝性别</th>
+                            <th>宝宝生日</th>
+                            <th>操作</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr class="odd gradeX">
+                            <td>Trident</td>
+                            <td>Internet Explorer 4.0</td>
+                            <td>Win 95+</td>
+                            <td class="center">4</td>
+                            <td class="center">X</td>
+                        </tr>
+                        <tr class="even gradeC">
+                            <td>Trident</td>
+                            <td>Internet Explorer 5.0</td>
+                            <td>Win 95+</td>
+                            <td class="center">5</td>
+                            <td class="center">C</td>
+                        </tr>
+                        <tr class="odd gradeA">
+                            <td>Trident</td>
+                            <td>Internet Explorer 5.5</td>
+                            <td>Win 95+</td>
+                            <td class="center">5.5</td>
+                            <td class="center">A</td>
+                        </tr>
+                        <tr class="even gradeA">
+                            <td>Trident</td>
+                            <td>Internet Explorer 6</td>
+                            <td>Win 98+</td>
+                            <td class="center">6</td>
+                            <td class="center">A</td>
+                        </tr>
+                        <tr class="gradeX">
+                            <td>Misc</td>
+                            <td>Links</td>
+                            <td>Text only</td>
+                            <td class="center">-</td>
+                            <td class="center">X</td>
+                        </tr>
+                        <tr class="gradeX">
+                            <td>Misc</td>
+                            <td>Lynx</td>
+                            <td>Text only</td>
+                            <td class="center">-</td>
+                            <td class="center">X</td>
+                        </tr>
+                        <tr class="gradeC">
+                            <td>Misc</td>
+                            <td>IE Mobile</td>
+                            <td>Windows Mobile 6</td>
+                            <td class="center">-</td>
+                            <td class="center">C</td>
+                        </tr>
+                        <tr class="gradeC">
+                            <td>Misc</td>
+                            <td>PSP browser</td>
+                            <td>PSP</td>
+                            <td class="center">-</td>
+                            <td class="center">C</td>
+                        </tr>
+                        <tr class="gradeU">
+                            <td>Other browsers</td>
+                            <td>All others</td>
+                            <td>-</td>
+                            <td class="center">-</td>
+                            <td class="center">U</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <!-- /.panel-body -->
+            </div>
         </div>
     </div>
 </div>
