Update user admin for table responsive

--- a/src/app/common/navigation.html
+++ b/src/app/common/navigation.html
@@ -112,3 +112,6 @@
         </div>
     </div>
 </nav>
+
+<!-- Custom Theme JavaScript -->
+<script src="assets/vendor/sb-admin/js/sb-admin-2.js"></script>
