--- a/src/app/user/user_admin.html
+++ b/src/app/user/user_admin.html
@@ -1,15 +1,6 @@
 <div class="container">
-    <div class="row" style="background-color: darkorange;">
-        <div class="col-lg-8">
-            <span class="label label-default">手机号码：</span>
-            <input type="text" placeholder="输入手机号码...">
-        </div>
-        <div class="col-lg-4">
-            <button type="button" class="btn btn-primary">搜索</button>
-        </div>
-    </div>
-    <div class="row" style="background-color: darkorange;">
-        <div class="col-lg-12" style="background-color: #dcdcdc;">
+    <div class="row" style="padding-top: 15px">
+        <div class="col-lg-12">
             <div class="panel panel-default">
                 <div class="panel-heading">会员列表</div>
                 <!-- /.panel-heading -->
@@ -25,68 +16,131 @@
                         </tr>
                         </thead>
                         <tbody>
-                        <tr class="odd gradeX">
-                            <td>Trident</td>
-                            <td>Internet Explorer 4.0</td>
-                            <td>Win 95+</td>
-                            <td class="center">4</td>
-                            <td class="center">X</td>
+                        <tr class="odd">
+                            <td>13713657890</td>
+                            <td>2012-01-01</td>
+                            <td>男</td>
+                            <td>2011-01-01</td>
+                            <td class="center"><button class="btn btn-primary">重置密码</button></td>
                         </tr>
-                        <tr class="even gradeC">
-                            <td>Trident</td>
-                            <td>Internet Explorer 5.0</td>
-                            <td>Win 95+</td>
-                            <td class="center">5</td>
-                            <td class="center">C</td>
+                        <tr class="even">
+                            <td>12345678901</td>
+                            <td>2012-01-01</td>
+                            <td>女</td>
+                            <td>2011-01-01</td>
+                            <td class="center"><button class="btn btn-primary">重置密码</button></td>
                         </tr>
-                        <tr class="odd gradeA">
-                            <td>Trident</td>
-                            <td>Internet Explorer 5.5</td>
-                            <td>Win 95+</td>
-                            <td class="center">5.5</td>
-                            <td class="center">A</td>
+                        <tr class="odd">
+                            <td>09876543211</td>
+                            <td>2012-01-01</td>
+                            <td>男</td>
+                            <td>2011-01-01</td>
+                            <td class="center"><button class="btn btn-primary">重置密码</button></td>
                         </tr>
-                        <tr class="even gradeA">
-                            <td>Trident</td>
-                            <td>Internet Explorer 6</td>
-                            <td>Win 98+</td>
-                            <td class="center">6</td>
-                            <td class="center">A</td>
+                        <tr class="even">
+                            <td>32145678900</td>
+                            <td>2012-01-01</td>
+                            <td>男</td>
+                            <td>2011-01-01</td>
+                            <td class="center"><button class="btn btn-primary">重置密码</button></td>
                         </tr>
-                        <tr class="gradeX">
-                            <td>Misc</td>
-                            <td>Links</td>
-                            <td>Text only</td>
-                            <td class="center">-</td>
-                            <td class="center">X</td>
+                        <tr class="odd">
+                            <td>09876543211</td>
+                            <td>2012-01-01</td>
+                            <td>女</td>
+                            <td>2011-01-01</td>
+                            <td class="center"><button class="btn btn-primary">重置密码</button></td>
                         </tr>
-                        <tr class="gradeX">
-                            <td>Misc</td>
-                            <td>Lynx</td>
-                            <td>Text only</td>
-                            <td class="center">-</td>
-                            <td class="center">X</td>
+                        <tr class="even">
+                            <td>32145678900</td>
+                            <td>2012-01-01</td>
+                            <td>男</td>
+                            <td>2011-01-01</td>
+                            <td class="center"><button class="btn btn-primary">重置密码</button></td>
                         </tr>
-                        <tr class="gradeC">
-                            <td>Misc</td>
-                            <td>IE Mobile</td>
-                            <td>Windows Mobile 6</td>
-                            <td class="center">-</td>
-                            <td class="center">C</td>
+                        <tr class="odd">
+                            <td>13713657890</td>
+                            <td>2012-01-01</td>
+                            <td>男</td>
+                            <td>2011-01-01</td>
+                            <td class="center"><button class="btn btn-primary">重置密码</button></td>
                         </tr>
-                        <tr class="gradeC">
-                            <td>Misc</td>
-                            <td>PSP browser</td>
-                            <td>PSP</td>
-                            <td class="center">-</td>
-                            <td class="center">C</td>
+                        <tr class="even">
+                            <td>12345678901</td>
+                            <td>2012-01-01</td>
+                            <td>女</td>
+                            <td>2011-01-01</td>
+                            <td class="center"><button class="btn btn-primary">重置密码</button></td>
                         </tr>
-                        <tr class="gradeU">
-                            <td>Other browsers</td>
-                            <td>All others</td>
-                            <td>-</td>
-                            <td class="center">-</td>
-                            <td class="center">U</td>
+                        <tr class="odd">
+                            <td>09876543211</td>
+                            <td>2012-01-01</td>
+                            <td>男</td>
+                            <td>2011-01-01</td>
+                            <td class="center"><button class="btn btn-primary">重置密码</button></td>
+                        </tr>
+                        <tr class="even">
+                            <td>32145678900</td>
+                            <td>2012-01-01</td>
+                            <td>男</td>
+                            <td>2011-01-01</td>
+                            <td class="center"><button class="btn btn-primary">重置密码</button></td>
+                        </tr>
+                        <tr class="odd">
+                            <td>09876543211</td>
+                            <td>2012-01-01</td>
+                            <td>女</td>
+                            <td>2011-01-01</td>
+                            <td class="center"><button class="btn btn-primary">重置密码</button></td>
+                        </tr>
+                        <tr class="even">
+                            <td>32145678900</td>
+                            <td>2012-01-01</td>
+                            <td>男</td>
+                            <td>2011-01-01</td>
+                            <td class="center"><button class="btn btn-primary">重置密码</button></td>
+                        </tr>
+                        <tr class="odd">
+                            <td>13713657890</td>
+                            <td>2012-01-01</td>
+                            <td>男</td>
+                            <td>2011-01-01</td>
+                            <td class="center"><button class="btn btn-primary">重置密码</button></td>
+                        </tr>
+                        <tr class="even">
+                            <td>12345678901</td>
+                            <td>2012-01-01</td>
+                            <td>女</td>
+                            <td>2011-01-01</td>
+                            <td class="center"><button class="btn btn-primary">重置密码</button></td>
+                        </tr>
+                        <tr class="odd">
+                            <td>09876543211</td>
+                            <td>2012-01-01</td>
+                            <td>男</td>
+                            <td>2011-01-01</td>
+                            <td class="center"><button class="btn btn-primary">重置密码</button></td>
+                        </tr>
+                        <tr class="even">
+                            <td>32145678900</td>
+                            <td>2012-01-01</td>
+                            <td>男</td>
+                            <td>2011-01-01</td>
+                            <td class="center"><button class="btn btn-primary">重置密码</button></td>
+                        </tr>
+                        <tr class="odd">
+                            <td>09876543211</td>
+                            <td>2012-01-01</td>
+                            <td>女</td>
+                            <td>2011-01-01</td>
+                            <td class="center"><button class="btn btn-primary">重置密码</button></td>
+                        </tr>
+                        <tr class="even">
+                            <td>32145678900</td>
+                            <td>2012-01-01</td>
+                            <td>男</td>
+                            <td>2011-01-01</td>
+                            <td class="center"><button class="btn btn-primary">重置密码</button></td>
                         </tr>
                         </tbody>
                     </table>
@@ -96,3 +150,12 @@
         </div>
     </div>
 </div>
+
+<!-- Page-Level Demo Scripts - Tables - Use for reference -->
+<script>
+    $(document).ready(function() {
+        $('#dataTables-example').DataTable({
+            responsive: true
+        });
+    });
+</script>
