--- a/src/app/product/product_list.html
+++ b/src/app/product/product_list.html
@@ -1,53 +1,102 @@
-<div class="container">
-    <div class="row" style="background-color: darkorange;">
-        <div class="col-lg-4" style="background-color: #dcdcdc;">
-            <h1>产品分类</h1>
-            <h1>发布状态</h1>
-        </div>
-        <div class="col-lg-4" style="background-color: #dcdcdc;">
-            <h1>产品类型</h1>
-            <h1>是否推荐</h1>
-        </div>
-        <div class="col-lg-4" style="background-color: #dcdcdc;">
-            <h1>搜索</h1>
-            <h1>搜索</h1>
-        </div>
-    </div>
-    <div class="row" style="background-color: darkorange;">
-        <div class="col-lg-3" style="background-color: greenyellow;">
-            <h1>新增AR产品</h1>
-            <h1>新增AR产品</h1>
-        </div>
-        <div class="col-lg-3" style="background-color: cornflowerblue;">
-            <h1>新增视频产品</h1>
-            <h1>新增视频产品</h1>
-        </div>
-    </div>
+<div class="container-fluid" style="padding-top: 30px">
     <div class="row">
-        <div class="col-lg-12" style="background-color: #ff0000;">
-            <h1>Table Content</h1>
-            <h1>Table Content</h1>
-            <h1>Table Content</h1>
-            <h1>Table Content</h1>
+        <div class="col-lg-4" style="padding-right: 50px">
+            <div class="row form-group">
+                <label for="product_category">产品分类:</label>
+                <select class="form-control" id="product_category">
+                    <option>全部</option>
+                    <option>语言</option>
+                </select>
+            </div>
+            <div class="row form-group">
+                <label for="release_state">发布状态:</label>
+                <select class="form-control" id="release_state">
+                    <option>上架</option>
+                    <option>下架</option>
+                </select>
+            </div>
+        </div>
+        <div class="col-lg-4" style="padding-right: 50px">
+            <div class="row form-group">
+                <label for="product_type">产品类型:</label>
+                <select class="form-control" id="product_type">
+                    <option>AR产品</option>
+                    <option>视频产品</option>
+                </select>
+            </div>
+            <div class="row form-group">
+                <label for="recommendation">是否推荐:</label>
+                <select class="form-control" id="recommendation">
+                    <option>是</option>
+                    <option>否</option>
+                </select>
+            </div>
+        </div>
+        <div class="col-lg-4">
+            <div class="row">
+                <div class="col-lg-4 col-lg-offset-4">
+                    <div class="form-group">
+                        <label>&nbsp;&nbsp;&nbsp;&nbsp;</label>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-lg-offset-4">
+                    <div class="form-group">
+                        <label>&nbsp;&nbsp;&nbsp;&nbsp;</label>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-lg-offset-4">
+                    <div class="form-group" style="margin-top: 22px">
+                        <button type="button" class="btn btn-default">&nbsp;&nbsp;搜&nbsp;&nbsp;索&nbsp;&nbsp;</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row" style="padding-top: 50px">
+        <div class="col-lg-3">
+            <div class="row form-group">
+                <button type="button" class="btn btn-default">&nbsp;&nbsp;新增AR产品&nbsp;&nbsp;</button>
+            </div>
+        </div>
+        <div class="col-lg-3">
+            <div class="row form-group">
+                <button type="button" class="btn btn-default">&nbsp;&nbsp;新增视频产品&nbsp;&nbsp;</button>
+            </div>
+        </div>
+    </div>
+    <div class="row" style="padding-top: 20px">
+        <div class="col-lg-12" style="background-color: #d3d3d3">
+            <h3>Table Content</h3>
+            <h3>Table Content</h3>
+            <h3>Table Content</h3>
             <h1><a href="#new_ar_product_detail/2222">2222 product</a></h1>
         </div>
     </div>
-    <div class="row" style="background-color: darkorange;">
-        <div class="col-lg-2" style="background-color: greenyellow;">
-            <h1>推荐</h1>
-            <h1>推荐</h1>
+
+    <div class="row" style="padding-top: 20px">
+        <div class="col-lg-2">
+            <div class="form-group">
+                <button type="button" class="btn btn-default">&nbsp;&nbsp;推&nbsp;&nbsp;&nbsp;&nbsp;荐&nbsp;&nbsp;</button>
+            </div>
         </div>
-        <div class="col-lg-2" style="background-color: cornflowerblue;">
-            <h1>取消推荐</h1>
-            <h1>取消推荐</h1>
+        <div class="col-lg-2">
+            <div class="form-group">
+                <button type="button" class="btn btn-default">&nbsp;&nbsp;取消推荐&nbsp;&nbsp;</button>
+            </div>
         </div>
-        <div class="col-lg-2" style="background-color: greenyellow;">
-            <h1>上架</h1>
-            <h1>上架</h1>
+        <div class="col-lg-2">
+            <div class="form-group">
+                <button type="button" class="btn btn-default">&nbsp;&nbsp;上&nbsp;&nbsp;&nbsp;&nbsp;架&nbsp;&nbsp;</button>
+            </div>
         </div>
-        <div class="col-lg-2" style="background-color: cornflowerblue;">
-            <h1>下架</h1>
-            <h1>下架</h1>
+        <div class="col-lg-2">
+            <div class="form-group">
+                <button type="button" class="btn btn-default">&nbsp;&nbsp;下&nbsp;&nbsp;&nbsp;&nbsp;架&nbsp;&nbsp;</button>
+            </div>
         </div>
     </div>
 </div>
