--- a/src/app/user/user_admin.html
+++ b/src/app/user/user_admin.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
     <div class="row" style="padding-top: 15px">
         <div class="col-lg-12">
             <div class="panel panel-default">
