--- a/src/app/category/first_level_category.html
+++ b/src/app/category/first_level_category.html
@@ -1,46 +1,66 @@
-<div class="container">
-    <div class="row" style="background-color: darkorange;">
-        <div class="col-lg-4" style="background-color: #dcdcdc;">
-            <h1>分类名</h1>
-        </div>
-        <div class="col-lg-4" style="background-color: #dcdcdc;">
-            <h1>分类内容</h1>
-        </div>
-        <div class="col-lg-4" style="background-color: #dcdcdc;">
-            <h1>搜索</h1>
-        </div>
-    </div>
-    <div class="row" style="background-color: darkorange;">
-        <div class="col-lg-12" style="background-color: #dcdcdc;">
-            <h1>分类表</h1>
-            <h1>分类表</h1>
-            <h1>分类表</h1>
-            <h1>分类表</h1>
-            <h1>分类表</h1>
-        </div>
-    </div>
-    <div class="row" style="background-color: darkorange;">
-        <div class="col-lg-4" style="background-color: #dcdcdc;">
-            <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">新增一级分类</button>
-
-            <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                            <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+<div id="page-wrapper">
+    <div class="row">
+        <div class="col-lg-12" style="padding-top: 30px">
+            <div class="panel panel-default">
+                <div class="panel-heading">一级分类</div>
+                <div class="panel-body">
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <form role="form">
+                                <h4>分类名</h4>
+                            </form>
                         </div>
-                        <div class="modal-body">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        <div class="col-lg-4">
+                            <form role="form">
+                                <h4>分类内容</h4>
+                            </form>
                         </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary">Save changes</button>
+                        <div class="col-lg-4">
+                            <form role="form">
+                                <h4>搜索</h4>
+                            </form>
                         </div>
                     </div>
-                    <!-- /.modal-content -->
+                    <div class="row">
+                        <div class="col-lg-12" style="background-color: #dcdcdc">
+                            <form role="form">
+                                <h4>分类表</h4>
+                                <h4>分类表</h4>
+                                <h4>分类表</h4>
+                                <h4>分类表</h4>
+                                <h4>分类表</h4>
+                            </form>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <form role="form">
+                                <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">新增一级分类</button>
+
+                                <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                                                <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                                            </div>
+                                            <div class="modal-body">
+                                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                                <button type="button" class="btn btn-primary">Save changes</button>
+                                            </div>
+                                        </div>
+                                        <!-- /.modal-content -->
+                                    </div>
+                                    <!-- /.modal-dialog -->
+                                </div>
+                            </form>
+                        </div>
+                    </div>
                 </div>
-                <!-- /.modal-dialog -->
             </div>
         </div>
     </div>
