--- a/src/app/common/navigation.html
+++ b/src/app/common/navigation.html
@@ -113,5 +113,7 @@
     </div>
 </nav>
 
-<!-- Custom Theme JavaScript -->
+<!--Metis Menu Plugin JavaScript-->
+<script src="assets/vendor/metisMenu/metisMenu.min.js"></script>
+<!--Custom Theme JavaScript-->
 <script src="assets/vendor/sb-admin/js/sb-admin-2.js"></script>
