--- a/src/app/product/new_video_product_detail.html
+++ b/src/app/product/new_video_product_detail.html
@@ -1,58 +1,140 @@
-<div class="container">
-    <div class="row" style="background-color: darkorange;">
-        <div class="col-lg-4" style="background-color: #dcdcdc;">
-            <h1>视频产品名</h1>
-            <h1>视频产品名</h1>
-        </div>
-        <div class="col-lg-4" style="background-color: #dcdcdc;">
-            <h1>价格</h1>
-            <h1>价格</h1>
-        </div>
-        <div class="col-lg-4" style="background-color: #dcdcdc;">
-            <h1>评分</h1>
-            <h1>评分</h1>
-        </div>
-    </div>
-    <div class="row" style="background-color: darkorange;">
-        <div class="col-lg-12" style="background-color: #dcdcdc;">
-            <h1>产品介质形式</h1>
-            <h1>产品介质形式</h1>
-        </div>
-    </div>
-    <div class="row" style="background-color: darkorange;">
-        <div class="col-lg-12" style="background-color: #dcdcdc;">
-            <h1>一级分类</h1>
-            <h1>一级分类</h1>
-        </div>
-    </div>
-    <div class="row" style="background-color: darkorange;">
-        <div class="col-lg-12" style="background-color: #dcdcdc;">
-            <h1>二级分类</h1>
-            <h1>二级分类</h1>
-        </div>
-    </div>
-    <div class="row" style="background-color: darkorange;">
-        <div class="col-lg-12" style="background-color: #dcdcdc;">
-            <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">新增/修改</button>
+<div id="page-wrapper">
+    <div class="row">
+        <div class="col-lg-12" style="padding-top: 30px">
+            <div class="panel panel-default">
+                <div class="panel-heading">新增AR产品/产品详情</div>
+                <div class="panel-body">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="row">
+                                <div class="col-lg-4">
+                                    <form role="form">
+                                        <div class="form-group">
+                                            <label>产品名：</label>
+                                            <input class="form-control" placeholder="输入产品名...">
+                                        </div>
+                                    </form>
+                                </div>
+                                <div class="col-lg-4">
+                                    <form role="form">
+                                        <div class="form-group">
+                                            <label>价格：</label>
+                                            <input class="form-control" placeholder="输入价格...">
+                                        </div>
+                                    </form>
+                                </div>
+                                <div class="col-lg-4">
+                                    <form role="form">
+                                        <div class="form-group">
+                                            <label>评分：</label>
+                                            <input class="form-control" placeholder="输入评分...">
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <form role="form">
+                                        <div class="form-group">
+                                            <label>产品介质形式：</label>
+                                            <div class="checkbox-inline">
+                                                <label><input type="checkbox" value="">电子书</label>
+                                            </div>
+                                            <div class="checkbox-inline">
+                                                <label><input type="checkbox" value="">书籍</label>
+                                            </div>
+                                            <div class="checkbox-inline">
+                                                <label><input type="checkbox" value="">卡牌</label>
+                                            </div>
+                                            <div class="checkbox-inline">
+                                                <label><input type="checkbox" value="">教具</label>
+                                            </div>
+                                            <div class="checkbox-inline">
+                                                <label><input type="checkbox" value="">益智玩具</label>
+                                            </div>
+                                            <div class="checkbox-inline">
+                                                <label><input type="checkbox" value="">其它</label>
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <form role="form">
+                                        <div class="form-group">
+                                            <label>一级分类：</label>
+                                            <div class="checkbox-inline">
+                                                <label><input type="checkbox" value="">语言</label>
+                                            </div>
+                                            <div class="checkbox-inline">
+                                                <label><input type="checkbox" value="">认知</label>
+                                            </div>
+                                            <div class="checkbox-inline">
+                                                <label><input type="checkbox" value="">兴趣</label>
+                                            </div>
+                                            <div class="checkbox-inline">
+                                                <label><input type="checkbox" value="">习惯</label>
+                                            </div>
+                                            <div class="checkbox-inline">
+                                                <label><input type="checkbox" value="">社交</label>
+                                            </div>
+                                            <div class="checkbox-inline">
+                                                <label><input type="checkbox" value="">人格</label>
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <form role="form">
+                                        <div class="form-group">
+                                            <label>二级分类：</label>
+                                            <div class="checkbox-inline">
+                                                <label><input type="checkbox" value="">故事</label>
+                                            </div>
+                                            <div class="checkbox-inline">
+                                                <label><input type="checkbox" value="">国学</label>
+                                            </div>
+                                            <div class="checkbox-inline">
+                                                <label><input type="checkbox" value="">拼音</label>
+                                            </div>
+                                            <div class="checkbox-inline">
+                                                <label><input type="checkbox" value="">英语</label>
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <form role="form">
+                                        <div class="form-group">
+                                            <label>适合年龄：</label>
+                                            <div class="checkbox-inline">
+                                                <label><input type="checkbox" value="">3岁</label>
+                                            </div>
+                                            <div class="checkbox-inline">
+                                                <label><input type="checkbox" value="">4岁</label>
+                                            </div>
+                                            <div class="checkbox-inline">
+                                                <label><input type="checkbox" value="">5岁</label>
+                                            </div>
+                                            <div class="checkbox-inline">
+                                                <label><input type="checkbox" value="">6岁</label>
+                                            </div>
+                                            <div class="checkbox-inline">
+                                                <label><input type="checkbox" value="">7岁</label>
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
 
-            <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                            <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-                        </div>
-                        <div class="modal-body">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary">Save changes</button>
-                        </div>
                     </div>
-                    <!-- /.modal-content -->
                 </div>
-                <!-- /.modal-dialog -->
             </div>
         </div>
     </div>
