--- a/src/app/product/primary_product.html
+++ b/src/app/product/primary_product.html
@@ -1,69 +1,55 @@
-<div class="container">
-    <div class="row" style="background-color: darkorange;">
-        <div class="col-lg-4" style="background-color: #dcdcdc;">
-            <h1>Content 1</h1>
-            <h1>Content 1</h1>
-            <h1>Content 1</h1>
-            <h1>Content 1</h1>
-            <h1>Content 1</h1>
-            <h1>Content 1</h1>
-            <h1>Content 1</h1>
-            <h1>Content 1</h1>
-            <h1>Content 1</h1>
-            <h1>Content 1</h1>
-        </div>
-        <div class="col-lg-8">
-            <div class="row">
-                <div class="col-lg-12" style="background-color: #ff0000;">
-                    <h1>Content 2</h1>
-                    <h1>Content 2</h1>
-                    <h1>Content 2</h1>
-                    <h1>Content 2</h1>
-                    <h1>Content 2</h1>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-6 col-md-6" style="background-color: greenyellow;">
-                    <h1>Content 3</h1>
-                    <h1>Content 3</h1>
-                    <h1>Content 3</h1>
-                    <h1>Content 3</h1>
-                    <h1>Content 3</h1>
-                </div>
-                <div class="col-lg-6 col-md-6" style="background-color: cornflowerblue;">
-                    <h1>Content 4</h1>
-                    <h1>Content 4</h1>
-                    <h1>Content 4</h1>
-                    <h1>Content 4</h1>
-                    <h1>Content 4</h1>
+<div id="page-wrapper">
+    <div class="row">
+        <div class="col-lg-12" style="padding-top: 30px">
+            <div class="panel panel-default">
+                <div class="panel-heading">首页产品</div>
+                <div class="panel-body">
+                    <div class="row">
+                        <div class="col-lg-4" style="background-color: darkgray">
+                            <form role="form">
+                                <h4>Content 1</h4>
+                                <h4>Content 1</h4>
+                                <h4>Content 1</h4>
+                                <h4>Content 1</h4>
+                                <h4>Content 1</h4>
+                            </form>
+                        </div>
+                        <div class="col-lg-8" style="background-color: #dcdcdc">
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <form role="form">
+                                        <h4>Content 1</h4>
+                                        <h4>Content 1</h4>
+                                        <h4>Content 1</h4>
+                                        <h4>Content 1</h4>
+                                        <h4>Content 1</h4>
+                                    </form>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-6" style="background-color: #ddd4b0">
+                                    <form role="form">
+                                        <h4>Content 1</h4>
+                                        <h4>Content 1</h4>
+                                        <h4>Content 1</h4>
+                                        <h4>Content 1</h4>
+                                        <h4>Content 1</h4>
+                                    </form>
+                                </div>
+                                <div class="col-lg-6" style="background-color: aquamarine">
+                                    <form role="form">
+                                        <h4>Content 1</h4>
+                                        <h4>Content 1</h4>
+                                        <h4>Content 1</h4>
+                                        <h4>Content 1</h4>
+                                        <h4>Content 1</h4>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-
-    <!--<h1>Hello world!!! primary product.</h1>
-
-    <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-        Launch Demo Modal
-    </button>
-
-    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-                </div>
-                <div class="modal-body">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
-                </div>
-            </div>
-            &lt;!&ndash; /.modal-content &ndash;&gt;
-        </div>
-        &lt;!&ndash; /.modal-dialog &ndash;&gt;
-    </div>-->
 </div>
