--- a/src/app/user/user_admin.html
+++ b/src/app/user/user_admin.html
@@ -1,155 +1,158 @@
-<div class="container-fluid">
-    <div class="row" style="padding-top: 15px">
-        <div class="col-lg-12">
+<div id="page-wrapper">
+    <div class="row">
+        <div class="col-lg-12" style="padding-top: 30px">
             <div class="panel panel-default">
                 <div class="panel-heading">会员列表</div>
-                <!-- /.panel-heading -->
                 <div class="panel-body">
-                    <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
-                        <thead>
-                        <tr>
-                            <th>手机号码</th>
-                            <th>注册时间</th>
-                            <th>宝宝性别</th>
-                            <th>宝宝生日</th>
-                            <th>操作</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr class="odd">
-                            <td>13713657890</td>
-                            <td>2012-01-01</td>
-                            <td>男</td>
-                            <td>2011-01-01</td>
-                            <td class="center"><button class="btn btn-primary">重置密码</button></td>
-                        </tr>
-                        <tr class="even">
-                            <td>12345678901</td>
-                            <td>2012-01-01</td>
-                            <td>女</td>
-                            <td>2011-01-01</td>
-                            <td class="center"><button class="btn btn-primary">重置密码</button></td>
-                        </tr>
-                        <tr class="odd">
-                            <td>09876543211</td>
-                            <td>2012-01-01</td>
-                            <td>男</td>
-                            <td>2011-01-01</td>
-                            <td class="center"><button class="btn btn-primary">重置密码</button></td>
-                        </tr>
-                        <tr class="even">
-                            <td>32145678900</td>
-                            <td>2012-01-01</td>
-                            <td>男</td>
-                            <td>2011-01-01</td>
-                            <td class="center"><button class="btn btn-primary">重置密码</button></td>
-                        </tr>
-                        <tr class="odd">
-                            <td>09876543211</td>
-                            <td>2012-01-01</td>
-                            <td>女</td>
-                            <td>2011-01-01</td>
-                            <td class="center"><button class="btn btn-primary">重置密码</button></td>
-                        </tr>
-                        <tr class="even">
-                            <td>32145678900</td>
-                            <td>2012-01-01</td>
-                            <td>男</td>
-                            <td>2011-01-01</td>
-                            <td class="center"><button class="btn btn-primary">重置密码</button></td>
-                        </tr>
-                        <tr class="odd">
-                            <td>13713657890</td>
-                            <td>2012-01-01</td>
-                            <td>男</td>
-                            <td>2011-01-01</td>
-                            <td class="center"><button class="btn btn-primary">重置密码</button></td>
-                        </tr>
-                        <tr class="even">
-                            <td>12345678901</td>
-                            <td>2012-01-01</td>
-                            <td>女</td>
-                            <td>2011-01-01</td>
-                            <td class="center"><button class="btn btn-primary">重置密码</button></td>
-                        </tr>
-                        <tr class="odd">
-                            <td>09876543211</td>
-                            <td>2012-01-01</td>
-                            <td>男</td>
-                            <td>2011-01-01</td>
-                            <td class="center"><button class="btn btn-primary">重置密码</button></td>
-                        </tr>
-                        <tr class="even">
-                            <td>32145678900</td>
-                            <td>2012-01-01</td>
-                            <td>男</td>
-                            <td>2011-01-01</td>
-                            <td class="center"><button class="btn btn-primary">重置密码</button></td>
-                        </tr>
-                        <tr class="odd">
-                            <td>09876543211</td>
-                            <td>2012-01-01</td>
-                            <td>女</td>
-                            <td>2011-01-01</td>
-                            <td class="center"><button class="btn btn-primary">重置密码</button></td>
-                        </tr>
-                        <tr class="even">
-                            <td>32145678900</td>
-                            <td>2012-01-01</td>
-                            <td>男</td>
-                            <td>2011-01-01</td>
-                            <td class="center"><button class="btn btn-primary">重置密码</button></td>
-                        </tr>
-                        <tr class="odd">
-                            <td>13713657890</td>
-                            <td>2012-01-01</td>
-                            <td>男</td>
-                            <td>2011-01-01</td>
-                            <td class="center"><button class="btn btn-primary">重置密码</button></td>
-                        </tr>
-                        <tr class="even">
-                            <td>12345678901</td>
-                            <td>2012-01-01</td>
-                            <td>女</td>
-                            <td>2011-01-01</td>
-                            <td class="center"><button class="btn btn-primary">重置密码</button></td>
-                        </tr>
-                        <tr class="odd">
-                            <td>09876543211</td>
-                            <td>2012-01-01</td>
-                            <td>男</td>
-                            <td>2011-01-01</td>
-                            <td class="center"><button class="btn btn-primary">重置密码</button></td>
-                        </tr>
-                        <tr class="even">
-                            <td>32145678900</td>
-                            <td>2012-01-01</td>
-                            <td>男</td>
-                            <td>2011-01-01</td>
-                            <td class="center"><button class="btn btn-primary">重置密码</button></td>
-                        </tr>
-                        <tr class="odd">
-                            <td>09876543211</td>
-                            <td>2012-01-01</td>
-                            <td>女</td>
-                            <td>2011-01-01</td>
-                            <td class="center"><button class="btn btn-primary">重置密码</button></td>
-                        </tr>
-                        <tr class="even">
-                            <td>32145678900</td>
-                            <td>2012-01-01</td>
-                            <td>男</td>
-                            <td>2011-01-01</td>
-                            <td class="center"><button class="btn btn-primary">重置密码</button></td>
-                        </tr>
-                        </tbody>
-                    </table>
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
+                                <thead>
+                                <tr>
+                                    <th>手机号码</th>
+                                    <th>注册时间</th>
+                                    <th>宝宝性别</th>
+                                    <th>宝宝生日</th>
+                                    <th>操作</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr class="odd">
+                                    <td>13713657890</td>
+                                    <td>2012-01-01</td>
+                                    <td>男</td>
+                                    <td>2011-01-01</td>
+                                    <td class="center"><button class="btn btn-primary">重置密码</button></td>
+                                </tr>
+                                <tr class="even">
+                                    <td>12345678901</td>
+                                    <td>2012-01-01</td>
+                                    <td>女</td>
+                                    <td>2011-01-01</td>
+                                    <td class="center"><button class="btn btn-primary">重置密码</button></td>
+                                </tr>
+                                <tr class="odd">
+                                    <td>09876543211</td>
+                                    <td>2012-01-01</td>
+                                    <td>男</td>
+                                    <td>2011-01-01</td>
+                                    <td class="center"><button class="btn btn-primary">重置密码</button></td>
+                                </tr>
+                                <tr class="even">
+                                    <td>32145678900</td>
+                                    <td>2012-01-01</td>
+                                    <td>男</td>
+                                    <td>2011-01-01</td>
+                                    <td class="center"><button class="btn btn-primary">重置密码</button></td>
+                                </tr>
+                                <tr class="odd">
+                                    <td>09876543211</td>
+                                    <td>2012-01-01</td>
+                                    <td>女</td>
+                                    <td>2011-01-01</td>
+                                    <td class="center"><button class="btn btn-primary">重置密码</button></td>
+                                </tr>
+                                <tr class="even">
+                                    <td>32145678900</td>
+                                    <td>2012-01-01</td>
+                                    <td>男</td>
+                                    <td>2011-01-01</td>
+                                    <td class="center"><button class="btn btn-primary">重置密码</button></td>
+                                </tr>
+                                <tr class="odd">
+                                    <td>13713657890</td>
+                                    <td>2012-01-01</td>
+                                    <td>男</td>
+                                    <td>2011-01-01</td>
+                                    <td class="center"><button class="btn btn-primary">重置密码</button></td>
+                                </tr>
+                                <tr class="even">
+                                    <td>12345678901</td>
+                                    <td>2012-01-01</td>
+                                    <td>女</td>
+                                    <td>2011-01-01</td>
+                                    <td class="center"><button class="btn btn-primary">重置密码</button></td>
+                                </tr>
+                                <tr class="odd">
+                                    <td>09876543211</td>
+                                    <td>2012-01-01</td>
+                                    <td>男</td>
+                                    <td>2011-01-01</td>
+                                    <td class="center"><button class="btn btn-primary">重置密码</button></td>
+                                </tr>
+                                <tr class="even">
+                                    <td>32145678900</td>
+                                    <td>2012-01-01</td>
+                                    <td>男</td>
+                                    <td>2011-01-01</td>
+                                    <td class="center"><button class="btn btn-primary">重置密码</button></td>
+                                </tr>
+                                <tr class="odd">
+                                    <td>09876543211</td>
+                                    <td>2012-01-01</td>
+                                    <td>女</td>
+                                    <td>2011-01-01</td>
+                                    <td class="center"><button class="btn btn-primary">重置密码</button></td>
+                                </tr>
+                                <tr class="even">
+                                    <td>32145678900</td>
+                                    <td>2012-01-01</td>
+                                    <td>男</td>
+                                    <td>2011-01-01</td>
+                                    <td class="center"><button class="btn btn-primary">重置密码</button></td>
+                                </tr>
+                                <tr class="odd">
+                                    <td>13713657890</td>
+                                    <td>2012-01-01</td>
+                                    <td>男</td>
+                                    <td>2011-01-01</td>
+                                    <td class="center"><button class="btn btn-primary">重置密码</button></td>
+                                </tr>
+                                <tr class="even">
+                                    <td>12345678901</td>
+                                    <td>2012-01-01</td>
+                                    <td>女</td>
+                                    <td>2011-01-01</td>
+                                    <td class="center"><button class="btn btn-primary">重置密码</button></td>
+                                </tr>
+                                <tr class="odd">
+                                    <td>09876543211</td>
+                                    <td>2012-01-01</td>
+                                    <td>男</td>
+                                    <td>2011-01-01</td>
+                                    <td class="center"><button class="btn btn-primary">重置密码</button></td>
+                                </tr>
+                                <tr class="even">
+                                    <td>32145678900</td>
+                                    <td>2012-01-01</td>
+                                    <td>男</td>
+                                    <td>2011-01-01</td>
+                                    <td class="center"><button class="btn btn-primary">重置密码</button></td>
+                                </tr>
+                                <tr class="odd">
+                                    <td>09876543211</td>
+                                    <td>2012-01-01</td>
+                                    <td>女</td>
+                                    <td>2011-01-01</td>
+                                    <td class="center"><button class="btn btn-primary">重置密码</button></td>
+                                </tr>
+                                <tr class="even">
+                                    <td>32145678900</td>
+                                    <td>2012-01-01</td>
+                                    <td>男</td>
+                                    <td>2011-01-01</td>
+                                    <td class="center"><button class="btn btn-primary">重置密码</button></td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
                 </div>
-                <!-- /.panel-body -->
             </div>
         </div>
     </div>
 </div>
+
 
 <!-- Page-Level Demo Scripts - Tables - Use for reference -->
 <script>
